<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search View -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:queryHint="@string/search_songs" />

    <!-- RecyclerView for Song List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alphabetIndex" /> <!-- Adjusted to leave space for alphabetical index -->

    <!-- Alphabetical Index on the Right Side -->
    <include
        android:id="@+id/alphabetIndex"
        layout="@layout/view_alphabetical_index"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Empty TextView -->
    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_songs_found"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/recyclerView"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
